css/index.css
#root {
  flex: 1;
  padding: 16px;
  /* max-width: 768px; */
  /* display: flex; */
  flex-direction: column;
  /* margin: 0 auto; */
  /* text-align: center; */
}

#root header {
  text-align: center;
}

#profile-picture {
  border-radius: 50%;
  height: 160px;
  width: 160px;
  border: 2px solid black;
  margin: 16px;
}

#soc-med {
  margin: 16px 0;
  display: flex;
  flex: 1;
  align-items: center;
  flex-basis: 64px;
  justify-content: center;
}

.soc-med-img {
  width: 56px;
  height: 56px;
  object-fit: contain;
}

.soc-med-row {
  padding-right: 24px;
}

.soc-med-row:last-of-type {
  padding-right: 0;
}

footer {
  padding: 16px;
  clear: both;
}

.disclaimer {
  font-size: 8px;
}

#apps {
  margin-top: 16px;
}

.action-msg {
  padding-top: 16px;
  display: block;
}

.app-desc {
  padding: 0 !important;
}

.app-desc div {
  clear: both;
  padding: 4px 0;
}

.app-img, .site-img {
  border-radius: 16px;
}

.app-img img, .site-img img {
  border-radius: 24px;
  height: 120px;
}

.site-img {
  float: left;
  padding-right: 16px;
}

.site-block {
  clear: both;
}

.stores {
  width: 120px;
}

.app-block {
  width: 150px;
  clear: both;
}

.app-title {
  margin: 4px 0;
  margin-bottom: 0px;
}

.site-block:not(:last-child) {
  padding-bottom: 16px;
}

.site-desc {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 120px;
  font-weight: bold;
}

#myname {
  font-weight: bold;
}

.site-row {
  display: flex;
}

.site-col {
  flex: 1;
  width: 50%;
}

.music-container {
  padding-right: 16px;
}

.apps-container {
  padding-left: 16px;
}

.yt-embed {
  margin-top: 8px;
}

@media screen and (max-width: 960px) {
  .site-row {
    flex-direction: column;
  }

  .site-col {
    width: initial;
  }

  .music-container {
    padding-right: 0;
  }
  
  .apps-container {
    padding-left: 0;
  }  
}

.text-center {
  text-align: center;
}

.middle-music {
  margin: 24px 0;
}

.edu-row {
  display: flex;
  padding: 16px 0;
}

.made-by {
  margin-bottom: 16px;
}

.edu-image-container {
  height: 100px;
  width: 100px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.edu-image {
  width: 100%;
  display: inline-block;
}

.edu-info {
  padding-left: 24px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.edu-inst {
  font-size: 1.2rem;
  font-weight: bold;
}

